# PHONE_PLAYER

./: .gitignore  README.md  disable.sh  enable.sh  install.sh  keypad_diag.py  pyproject.toml  uninstall.sh
Adafruit_Video_Looper/: directory.py  gpio_pins.py  matrix_keypad.py  model.py  usb_drive.py  usb_drive_copymode.py  video_looper.py  vlcplayer.py
assets/: video_looper.ini.template  video_looper.service.template
